# blonk-platform

./: Cargo.toml  README.md  SETUP.md  USAGE.md  db.sqlite
blonk_api/: .gitignore  Cargo.toml
blonk_api/src/: main.rs
blonk_bot/: Cargo.toml
blonk_bot/src/: main.rs
blonk_bot/src/actions/: approve_transaction.rs  create_transaction.rs  execute_transaction.rs  mod.rs  reject_transaction.rs
blonk_bot/src/collections/: blink_metadata.rs  button_metadata.rs  command.rs  handler.rs  mod.rs  transaction.rs  types.rs
blonk_bot/src/commands/: cancel.rs  help.rs  mod.rs
blonk_bot/src/handlers/: handle_blink_url.rs  handle_external_action.rs  handle_internal_action.rs  handle_parameters.rs  mod.rs
blonk_bot/src/instructions/: activate_transaction.rs  add_instruction.rs  approve_transaction.rs  create_transaction.rs  execute_transaction.rs  mod.rs  reject_transaction.rs
blonk_bot/src/requests/: create_transaction.rs  get_blink_metadata.rs  get_blink_transaction.rs  get_multisig_account.rs  get_transaction.rs  get_transaction_account.rs  get_transaction_accounts.rs  mod.rs  send_and_confirm_transaction.rs  update_transaction.rs
blonk_bot/src/utils/: consts.rs  find_blink_instructions.rs  find_key_indexes.rs  find_unique_account_metas_map.rs  get_group_chat_id.rs  get_instruction_pubkey.rs  get_multisig_authority_pubkey.rs  get_multisig_pubkey.rs  get_program.rs  get_transaction_pubkey.rs  get_transaction_request_buttons.rs  get_transaction_request_message.rs  get_user_keypair.rs  mod.rs
src/: main.rs
src/actions/: create_transaction.rs  execute_transaction.rs  (+1 more)
(+21 files in other folders)
