[package]
name = "blonk_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
